--- a/extensions/theme-app-extension/blocks/crowdfunding_selector.liquid
+++ b/extensions/theme-app-extension/blocks/crowdfunding_selector.liquid
@@ -74,6 +74,7 @@
 {% if available_crowdfunding_campaigns_count %}
   <crowdfunding-selector
     data-section-id="{{ section.id }}"
+    data-product-id="{{ product.id }}"
     data-product-variant-id="{{ current_variant.id }}"
     data-selling-plan-id="{{ current_selling_plan.id }}"
     data-default-product-form-id="{{ default_product_form_id }}"
