--- a/extensions/theme-app-extension/blocks/presale_selector.liquid
+++ b/extensions/theme-app-extension/blocks/presale_selector.liquid
@@ -68,6 +68,7 @@
 {% if available_presale_campaigns_count %}
   <presale-selector
     data-section-id="{{ section.id }}"
+    data-product-id="{{ product.id }}"
     data-product-variant-id="{{ current_variant.id }}"
     data-selling-plan-id="{{ current_selling_plan.id }}"
     data-default-product-form-id="{{ default_product_form_id }}"
